# panelo

./: .gitignore  Makefile  README.md  pyproject.toml
deploy/: Makefile  README.md  install_systemd.sh  nginx-panelo.conf  panelo.service.template
output/: webapp_run.ascii.txt  webapp_run.json  webapp_run.txt
panelo/: __init__.py  __main__.py  algorithms.py  cli.py  core.py  input.csv  models.py  output.py  webapp.py
testo/: test.csv
tests/: __init__.py  test_algorithms.py  test_cli.py  test_comparison.py  test_integration_outputs.py  test_models.py  test_output.py  test_packing.py
tests/data/: input.csv
