[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panelo"
version = "0.1.0"
description = "A panel loading library with CLI interface"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nicegui>=2.0.0",
    "typer>=0.9.0",
    "weasyprint>=61.2",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
panelo = "panelo.cli:app"
panelo-web = "panelo.webapp:run"

[tool.setuptools.packages.find]
include = ["panelo*"]
